--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "tests": "cypress open"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.3",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "cypress": "^10.3.0"
   }
 }
